@@ -80,6 +80,10 @@ void wap_appl_shutdown(void) {
 	gw_assert(run_status == running);
 	list_remove_producer(queue);
 	run_status = terminating;
+	
+	gwthread_join_all(main_thread);
+	gwthread_join_all(fetch_thread);
+	
 	while ((e = list_extract_first(queue)) != NULL)
 		wap_event_destroy(e);
 	list_destroy(queue);
